--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "tailwind": "npx tailwindcss -i ./public/stylesheets/tailwind.css -o ./public/stylesheets/style.css --watch"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "nodemon": "^3.1.7",
     "tailwindcss": "^3.4.13"
   }
 }
