--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
+    "mysql2": "^3.11.3",
     "nodemon": "^3.1.7",
     "tailwindcss": "^3.4.13"
   }
